Fixed: The user resource icon is too big in the context menu

--- a/src/management-system-v2/app/globals.css
+++ b/src/management-system-v2/app/globals.css
@@ -149,6 +149,10 @@
   font-size: 24px;
 }
 
+.proceed-user-icon.context-menu-icon::before {
+  font-size: 20px;
+}
+
 .proceed-server-icon::before {
   font-family: var(--custom-icon-font);
   content: 'd';
